1.17
 * ID3: 
   * Support for the iTunes non-standard TSO2 and TSOC frames.
   * Fix a bug in ID3v2.4 footer flag detection, (#5)
 * MP4: Don't fail or double-encode UTF-8 strings when given a str.
 * EasyID3: Extension API for defining new "easy" tags at runtime.
 * EasyMP4: Like EasyID3, but for iTunes MPEG-4 files.
 * mutagen.File: New 'easy=True' argument to create new EasyMP3, EasyMP4,
   EasyTrueAudio, and EasyID3FileType instances.

1.16 - 2009.06.15
 * Website / code repository move.
 * Bug Fixes:
   * EasyID3: Invalid keys now raise KeyError (and ValueError).
   * mutagen.File: .flac files with an ID3 tag will be opened as FLAC.
 * MAJOR API INCOMPATIBILITY!!!!
   * Python 2.6 has required us to rename the .format attribute of M4A/MP4
     cover atoms, because it conflicts with the new str.format method.
     It has been renamed .imageformat.

1.15 - 2008.12.01
 * Bug Fixes:
   * mutagen.File: Import order no longer affects what type is returned.
   * mutagen.id3: Compression of frames is now disabled.
   * mutagen.flac.StreamInfo: Fix channel mask (support channels > 2). [35]
   * mutagen.mp3: Ignore Xing headers if they are obviously wrong.

1.14 - 2008.05.31
 * Bug Fixes:
   * MP4/M4A: Fixed saving of atoms with 64-bit size on 64-bit platforms.
   * MP4: Conversion of 'gnre' atoms to '\xa9gen' text atoms now correctly
     produces a list of string values, not just a single value.
   * ID3: Broken RVA2 frames are now discarded. (Vladislav Naumov)
   * ID3: Use long integers when appropriate.
  * VCommentDict: Raise UnicodeEncodeErrors when trying to use a Unicode
    key that is not valid ASCII; keys are also normalized to ASCII
    str objects. (Forest Bond)
 * Tests:
   * FLAC: Use 2**64 instead of 2**32 to test overflow behavior.

1.13 - 2007.12.03
 * Bug Fixes:
   * FLAC: Raise IOError, instead of UnboundLocalError, when trying
     to open a non-existant file. (Lukáš Lalinský, Debian #448734)